--- a/index.html
+++ b/index.html
@@ -11,9 +11,58 @@
 <h3>(Name of Island), (of the coast of somewhere)</h3>
 <h3>420-123-6969</h3>
 <h3>Nathanthetreasure@gmail.com</h3>
-<img src="https://static.wikia.nocookie.net/uncharted/images/9/9d/Nathan_Drake_from_A_Thief%27s_End.png/revision/latest/scale-to-width-down/340?cb=20180521172750" alt="">
+<img class=bro src="https://static.wikia.nocookie.net/uncharted/images/9/9d/Nathan_Drake_from_A_Thief%27s_End.png/revision/latest/scale-to-width-down/340?cb=20180521172750" alt="">
 </header>
 <body>
-    
+    <h2>Professional experience</h2>
+<h4>2016</h4>
+<h3>Treasure hunter and Archaeologist, self employed.
+<ul>
+    <li>Unearthed countless hidden tombs and artifacts in the search for Libertalia</li>
+    <li>Discovered the island of Libertalia in the Indian Ocean near Madagascar</li>
+    <li>Great problem solving skills in stressful situations</li>
+</ul>
+<h4>2011</h4>
+<h3>Treasure hunter and Archaeologist, self employed.</h3>
+<ul>
+    <li>Was a part of a sting operation</li>
+    <li>Unearthed 3 previously unknown tombs</li>
+    <li>Discovered the long lost city of Ubar located in the middle of the Rub' al Khali desert.</li>
+</ul>
+<h4>2009</h4>
+<h3>Treasure hunter and Archaeologist, self employed.</h3>
+<ul>
+    <li>Discovered the long forgotten kingdom of Shambhala</li>
+    <li>Discovered and destroyed a powerful and priceless artifact in the heart of Shambala</li>
+    <li>Took down hundreds of armed guards with and without lethal force</li>
+</ul>
+<h5>2007</h5>
+<h3>Treasure hunter and Archaeologist, self employed</h3>
+<ul>
+    <li>took down hundreds of hired mercenaries</li>
+    <li>Found various artifact both with and without extraordinary power</li>
+    <li>Discovered a previously hidden island in the pacific</li>
+</ul>
+<h2>Education</h2>
+<h3>No education, Skills learnt through work and experience.</h3>
+<h2>Skills</h2>
+<ul>
+    <li>Skilled freerunner and climber</li>
+    <li>Can handle a variety of guns</li>
+    <li>Skilled in hand to hand combat</li>
+    <li>Able to follow leads and clues to achieve his goal</li>
+    <li>Excellent diving skills</li>
+</ul>
+<h2>Languages</h2>
+<ul style="text-decoration: none;">
+    <li>English - Native language</li>
+    <li>Indonesian - able to use and comprehend the language both in written and spoken form</li>
+    <li>16th century spanish - able to use the language both in written and spoken form</li>
+    <li>Latin - Not a native but can speak and write in the language.</li>
+</ul>
+<h2>References</h2>
+<p>Harry Flynn - Former associate</p>
+<p>Victor Sullivan - Former mentor and treasure hunter</p>
+<p>Elena Fisher - Wife and TV personality</p>
 </body>
 </html>
