--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <h3>Nathanthetreasure@gmail.com</h3>
     </address>
     <h2 style="color:white;">.</h2>
-    <h6 style="border-bottom: 9px solid darkolivegreen;"></h6>
+    <h6 id="exp" style="border-bottom: 9px solid darkolivegreen;"></h6>
 </header>
 <body>
-    <h2 id="exp" class="rubrik">Professional experience</h2>
+    <h2 class="rubrik">Professional experience</h2>
     <h3 style="color:white;" >__</h3>
 <h4>2016</h4>
 <h3>Treasure hunter and Archaeologist, self employed.</h3>
