--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <address style="line-height: 2rem;">
         <h3>(Name of Island), (of the coast of somewhere)</h3>
         <h3>420-123-6969</h3>
-        <h3>Nathanthetreasure@gmail.com</h3>
+        <h3 id="exp" >Nathanthetreasure@gmail.com</h3>
     </address>
     <h2 style="color:white;">.</h2>
-    <h6 id="exp" style="border-bottom: 9px solid darkolivegreen;"></h6>
+    <h6 style="border-bottom: 9px solid  #158467;"></h6>
 </header>
 <body>
     <h2 class="rubrik">Professional experience</h2>
@@ -60,13 +60,13 @@
 <ul>
     <li>took down hundreds of hired mercenaries</li>
     <li>Found various artifact both with and without extraordinary power</li>
-    <li>Discovered a previously hidden island in the pacific</li>
+    <li id="edu" >Discovered a previously hidden island in the pacific</li>
 </ul>
-<h6 style="border-bottom: 3px solid darkolivegreen;"></h6>
-<h2 id="edu" class="rubrik">Education</h2>
-<p>No education, Skills learnt through work and experience.</p>
-<h6 style="border-bottom: 3px solid darkolivegreen;"></h6>
-<h2 id="skills" class="rubrik">Skills</h2>
+<h6 style="border-bottom: 3px solid  #158467;"></h6>
+<h2 class="rubrik">Education</h2>
+<p  id="skills">No education, Skills learnt through work and experience.</p>
+<h6 style="border-bottom: 3px solid #158467;"></h6>
+<h2 class="rubrik">Skills</h2>
 <ul>
     <li>Skilled freerunner and climber</li>
     <li>Can handle a variety of guns</li>
@@ -74,7 +74,7 @@
     <li>Able to follow leads and clues to achieve his goal</li>
     <li>Excellent diving skills</li>
 </ul>
-<h6 style="border-bottom: 3px solid darkolivegreen;"></h6>
+<h6 style="border-bottom: 3px solid  #158467;"></h6>
 <h2 id="lang" class="rubrik">Languages</h2>
 <ul>
     <li>English - Native language</li>
@@ -82,7 +82,7 @@
     <li>16th century spanish - able to use the language both in written and spoken form</li>
     <li>Latin - Not a native but can speak and write in the language.</li>
 </ul>
-<h6 style="border-bottom: 3px solid darkolivegreen;"></h6>
+<h6 style="border-bottom: 3px solid  #158467;"></h6>
 <h2 id="ref" class="rubrik">References</h2>
 <p><strong>Harry Flynn</strong> - Former associate</p>
 <p><strong>Victor Sullivan</strong> - Former mentor and treasure hunter</p>
